@@ -1,3 +1,5 @@
+* Optimize NodeList modification methods by creating an element/fragment once instead of for each iteration. [jddalton]
+
 * Add fuse.dom.HTMLElement and move HTML related methods from fuse.dom.Element to HTMLElement. [jddalton]
 
 * Remove partial support for elements being passed to fuse.Object.toJSON(). [jddalton]
